--- a/D-笔试面经/笔试-iHandy-180927.md
+++ b/D-笔试面经/笔试-iHandy-180927.md
@@ -20,6 +20,25 @@ Index
 问甲先射击，乙先中弹的概率？
 ```
 
+**答案是 2/3**
+
+用归纳法找出递推公式，然后用无穷级数解这个问题。
+
+甲射中乙的概率是 p_乙被射中 = 0.5，未射中的概率 p_(乙未被射中) = 1 - p_乙被射中 = 0.5 。
+
+那不难推出，在甲第 1 ... ∞次射击时射中乙的概率分别是：
+
+![image](https://user-images.githubusercontent.com/3195838/53491790-30eea480-3ad2-11e9-8037-c64d119faada.png)
+
+
+我们对这个数列求和，就能得到乙被射中的总概率：
+
+![image](https://user-images.githubusercontent.com/3195838/53491663-e705be80-3ad1-11e9-9822-f5de8aab4adc.png)
+
+其中「step 5」求解 sum 0.25^i where i from 0 to ∞  =  1 /(1 - 0.25) 中用到了无穷级数，下边尝试证明它。
+
+![image](https://user-images.githubusercontent.com/3195838/53492360-a018c880-3ad3-11e9-894e-4702d444f96b.png)
+
 
 ## 【编程】比大更大
 > 剑指 Offer：[把数组排成最小的数](https://www.nowcoder.com/practice/8fecd3f8ba334add803bf2a06af1b993?tpId=13&tqId=11185&tPage=2&rp=2&ru=/ta/coding-interviews&qru=/ta/coding-interviews/question-ranking)
