--- a/D-笔试面经/笔试-iHandy-180927.md
+++ b/D-笔试面经/笔试-iHandy-180927.md
@@ -24,7 +24,7 @@ Index
 
 用归纳法找出递推公式，然后用无穷级数解这个问题。
 
-甲射中乙的概率是 p_乙被射中 = 0.5，未射中的概率 p_(乙未被射中) = 1 - p_乙被射中 = 0.5 。
+甲射中乙的概率是 p_乙被射中 = 0.5，未射中的概率 p_乙未被射中 = 1 - p_乙被射中 = 0.5 。
 
 那不难推出，在甲第 1 ... ∞次射击时射中乙的概率分别是：
 
@@ -37,7 +37,8 @@ Index
 
 其中「step 5」求解 sum 0.25^i where i from 0 to ∞  =  1 /(1 - 0.25) 中用到了无穷级数，下边尝试证明它。
 
-![image](https://user-images.githubusercontent.com/3195838/53492360-a018c880-3ad3-11e9-894e-4702d444f96b.png)
+![image](https://user-images.githubusercontent.com/3195838/53494899-b88be180-3ad9-11e9-9434-665c988b3a7a.png)
+
 
 
 ## 【编程】比大更大
